korjattiin css linkki

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Sähkö, Laskurit, Kaavat">
     <meta name="author" content="Jonne Saloranta">
     <meta name="robots" content="index, follow">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/JonneSaloranta/Sahko-Laskimet/master/styles.css">
     <title>Sähkö laskimet ja kaavat</title>
 </head>
 
